# jev

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  architecture.md  vision.md
jev/: Cargo.toml
jev/assets/: Cargo.tmpl.toml  main.tmpl.rs  plan_main.rs
jev/src/: exec.rs  llm.rs  main.rs  plan.rs  prompt.rs
jevs/: Cargo.toml
jevs-macros/: Cargo.toml
jevs-macros/src/: lib.rs
jevs/src/: api.rs  file.rs  fs.rs  gate.rs  http.rs  label.rs  lib.rs  manifest.rs  runtime.rs  stash.rs  text.rs  trust.rs
jevsr/: Cargo.toml
jevsr/src/: lib.rs
jevstd/: Cargo.toml
jevstd/src/: lib.rs  text.rs
tests/: e2e.fish  e2e.sh
tests/fixtures/e2e/: hello.txt
